Fix link and icon display on mobile

--- a/css/promo-styles.css
+++ b/css/promo-styles.css
@@ -47,7 +47,7 @@ table {
 
 #blurred-background {
     content: "";
-    background-image: url('https://thecharmingtools.com/assets/tct-muenster-background-minimal.webp');
+    background-image: url('https://thecharmingtools.com/assets/img/tct-muenster-background-minimal.webp');
     background-size: cover;
     background-position: center;
     position: fixed;
@@ -159,7 +159,11 @@ h1 {
 }
 
 .link-icon-wrapper > img {
-    height: 2.8rem;
+    height: 3rem;
+}
+
+#apple-logo {
+    background-color: transparent;
 }
 
 @media (max-width: 992px) {
